Fix id error and clean comments.

--- a/MovieQuotes/app/src/main/res/layout/content_main.xml
+++ b/MovieQuotes/app/src/main/res/layout/content_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/movie_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/quote_text_view"
+        android:layout_below="@id/quote_text_view"
         android:gravity="end"
         android:text="@string/movie"
         android:textSize="24sp" />
