--- a/MovieQuotes/app/src/main/res/layout/row_view.xml
+++ b/MovieQuotes/app/src/main/res/layout/row_view.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/row_card_view"
         android:layout_margin="4dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".MainActivity"
@@ -13,7 +14,7 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="4dp">
         <TextView
                 android:id="@+id/quote_text_view"
                 android:layout_width="wrap_content"
@@ -21,6 +22,7 @@
                 android:layout_centerInParent="true"
                 android:text="@string/quote"
                 android:textSize="24sp"
+                android:layout_marginBottom="48dp"
                 android:textStyle="bold"/>
 
         <TextView
